--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,4 @@
+'''Updated on 26-07-2024
 @conference{nokey,
   title = {SEAR: Semantically-grounded Audio Representations},
   author = {Rajat Hebbar and Digbalay Bose and Shrikanth Narayanan},
